login issue fix wallet integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,5 +45,6 @@ blockchain.owner.privateKey=0xcd03668ad9089c5451f9c0d90eaa5106f3721884f4e050bed2
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.upload-dir=./uploads
-contract.address=0xCEAbceC139558afB12fF601CA719232851E0D598
+#file.upload-dir=./uploads
+#contract.address=0xd42277F6Dfd4a7BA5d63900F979eB0Fa39Bf37Fd
+contract.address=0x97BA6C53757194A60784e0440826bd940318c72F
